--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,12 +1,55 @@
 @import "compass/css3/box-sizing";
+@import "compass/css3/box-shadow";
+@import "compass/css3/transition";
+@import "compass/utilities/general/clearfix";
 
-body {
-    color: black;
-    font-size: 100%;
-}
+@import "common/variables";
+@import "mixins/fonts";
 
-*,
-*::after,
-*::before {
-    @include box-sizing(border-box);
+@import "common/reset";
+@import "common/type";
+@import "common/layout";
+@import "common/footer";
+
+.header {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: $header-background-color;
+
+    &-nav {
+        min-width: 480px;
+        max-width: 80%;
+        height: 50px;
+        display: flex;
+        margin: 0 auto;
+        padding: 0 40px;
+        -webkit-box-align: center;
+        align-items: center;
+
+        &__list {
+            width: 100%;
+            display: flex;
+            padding: 0;
+
+            &-item {
+                display: list-item;
+                margin-left: 24px;
+                text-align: -webkit-match-parent;
+
+                &-link {
+                    padding: 10px;
+                    font-size: 14px;
+                    color: white;
+
+                    &:hover {
+                        color: transparentize(white, .3);
+                    }
+                }
+            }
+        }
+    }
 }
