--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -5,7 +5,7 @@ $inaccent-text-color: rgba(0, 0, 0, .54);
 $accent-text-color: #0091EA;
 $fill-background-color: #f3f5f6;
 
-$base-border-color: rgba(219, 219, 219, 1);
+$base-border-color: #ccc;
 $accent-border-color: #E64A19;
 
 $accent-background-color: $accent-border-color;
