--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -10,3 +10,8 @@ $accent-border-color: #E64A19;
 
 $accent-background-color: $accent-border-color;
 $header-background-color: rgba(21, 21, 23, .95);
+
+$screen-min-width-small: 768px;
+$screen-min-width-mid: 1000px;
+$screen-min-width-large: 1210px;
+$screen-min-width-xlarge: 1920px;
